--- a/config/database.yml
+++ b/config/database.yml
@@ -20,13 +20,10 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  port: 5432
-  username: tismo
-  password: code
 
 development:
   <<: *default
-  database: waterBackend
+  database: makawasco_backend_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
